# capstone

./: README.md
basic/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
basic/devel/include/race/: drive_param.h  drive_values.h  pid_input.h
basic/devel/lib/hokuyo_node/: getFirmwareVersion  getID  hokuyo_node
basic/devel/lib/joy/: joy_node
basic/devel/lib/pkgconfig/: ackermann_cmd_mux.pc  ackermann_msgs.pc  f110_description.pc  gap_finding.pc  hokuyo_node.pc  joy.pc  lab_pure_pursuit.pc  race.pc  racecar.pc  racecar_control.pc  racecar_description.pc  racecar_gazebo.pc  serial.pc  (+5 more)
flask_app/: web_interface.py
flask_app/templates/: styles.css  webpage.html
flask_app/templates/font/: speedyregular-7bloe-demo.html  stylesheet.css
misc/lidar/: CMakeLists.txt  README.md
misc/lidar/launch/: rplidar.launch  rplidar_a3.launch  rplidar_s1.launch  rplidar_s2.launch  view_rplidar.launch  view_rplidar_s2e.launch
misc/lidar/src/: node.cpp
misc/pixy/: README.md
misc/pixy/pixy2_msgs/: package.xml
misc/pixy/pixy2_node/: package.xml
simulator/: package.xml  params.yaml
simulator/launch/: simulator.launch
simulator/node/: behavior_controller.cpp  mux.cpp  wall_follow.cpp
velma/: README.md  frames.gv
velma/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
velma/src/: README.md
velma/src/gpio/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
velma/src/indicators/: CMakeLists.txt  package.xml  params.yaml
velma/src/led_control/: CMakeLists.txt  package.xml
velma/src/led_control/launch/: led_control.launch
velma/src/led_control/node/: blind_spot.cpp  indicator.cpp  manual.cpp
velma/src/lidar/: CHANGELOG.rst
velma/src/navigation/: costmap_common_params.yaml  local_costmap_params.yaml  move_base.launch
velma/src/pathing/: CMakeLists.txt  package.xml  params.yaml  racecar.xacro
velma/src/pixy/: README.md
velma/src/twist_to_ackermann/: CMakeLists.txt  package.xml
velma/src/velma/: CMakeLists.txt
(+558 files in other folders)
